Created a site plan

--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-us">
+  <head>
+    <meta charset="UTf-8" />
+    <title>Home - WDD 130</title>
+  </head>
+  
+  <body>
+    <h1>Justin Palmer</h1>
+    <p>
+      Hello, my name is Justin Palmer. I am currently an Illustration major but
+      I want to go into Animation. <strong>However,</strong> BYU-Idaho does not
+      teach animation so I will have to change schools. I am most likely going
+      to be trying to transfer over to <em>BYU-Provo</em>. <br />
+      Some things that I like to do are:
+    </p>
+    <ul>
+      <li>Musicals</li>
+      <li>Play Piano</li>
+      <li>Preform Magic</li>
+    </ul>
 
-<head>
-  <meta charset="UTf-8" />
-  <title>Home - WDD 130</title>
-</head>
-
-<body>
-  <h1>Justin Palmer</h1>
-  <p>Hello, my name is Justin Palmer. I am currently an Illustration major but I want to go into Animation.
-    <strong>However,</strong> BYU-Idaho does not teach animation so I will have to change schools. I am most likely
-    going to be trying to transfer over to <em>BYU-Provo</em>. <br> Some things that I like to do are:
-  </p>
-  <ul>
-    <li>Musicals</li>
-    <li>Play Piano</li>
-    <li>Preform Magic</li>
-  </ul>
-
-  <img
-    src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.6435-9/137197958_2966882626868395_8405279806233496585_n.jpg?_nc_cat=108&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=1BWasJZJZDkAX9KzNTF&tn=DjxXX6MmS-CIrD1E&_nc_ht=scontent-sjc3-1.xx&oh=81efdf9f3e10cbf933d7c8ef018d2ee3&oe=616D512C"
-    alt="Picture of Justin Palmer">
-</body>
-
+    <img
+      src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.6435-9/137197958_2966882626868395_8405279806233496585_n.jpg?_nc_cat=108&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=1BWasJZJZDkAX9KzNTF&tn=DjxXX6MmS-CIrD1E&_nc_ht=scontent-sjc3-1.xx&oh=81efdf9f3e10cbf933d7c8ef018d2ee3&oe=616D512C"
+      alt="Picture of Justin Palmer"
+    />
+  </body>
 </html>
