--- a/siteplan.html
+++ b/siteplan.html
@@ -1,14 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Plan</title>
-    <meta name="description" content="This page is the site plan for the white water rafting site">
-</head>
-<body>
-    <header>Site Plan</header>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Site Plan for White Water Rafting</title>
+    <meta
+      name="description"
+      content="This page is the site plan for the White Water Rafting site"
+    />
+  </head>
+  <body>
+    <header>
+      <h1>Site Plan</h1>
+      <h2>Justin Palmer</h2>
+    </header>
+    <nav>
+      <ul>
+        <li>Site Name</li>
+        <li>Purpose</li>
+        <li>Audience</li>
+        <li>Logo</li>
+        <li>Color Scheme</li>
+        <li>Typography</li>
+      </ul>
+    </nav>
+    <main>
+      <section class="item">
+        <h3>Site Name</h3>
+        <p>White Water Rafting</p>
+      </section>
+      <section class="item">
+        <h3>Purpose</h3>
+        <p>
+          The purpose of this site is to provide people the information that
+          they need inorder to begin their white water rafting experiance.
+        </p>
+      </section>
+      <section class="item">
+        <h3>Audience</h3>
+        <p>Where can we go white water rafting?</p>
+        <p>How do white water raft?</p>
+        <p>When is the best time to raft?</p>
+        <p>What should I bring to with me?</p>
+      </section>
+      <section class="item">
+        <h3>Logo</h3>
+        <img src="images/logo.png" alt="White Water Rafting Logo" />
+      </section>
+      <section class="item">
+        <h3>Color Scheme</h3>
+        <p>Primary Color = #9BA2FF <br />Will be used for background</p>
+        <p>
+          Secondary Color = #17BEBB <br />
+          Will be used as heading background
+        </p>
+        <p>
+          Accent Color = #C81D25 <br />
+          Will be used to show importance
+        </p>
+      </section>
+      <section class="item">
+        <h3>Typography</h3>
+        <p>
+          I will us the 'Amaranth' font for the heading and the 'Actor' font for
+          the paragraph because they are simple and easy to read
+        </p>
+      </section>
+    </main>
+    <footer>
+      <p>Contact Info</p>
+    </footer>
+  </body>
 </html>
