--- a/siteplan.html
+++ b/siteplan.html
@@ -50,14 +50,18 @@
       </section>
       <section class="item">
         <h3>Color Scheme</h3>
-        <p>Primary Color = #9BA2FF <br />Will be used for background</p>
+        <p>Primary Color = #17bebb <br />Will be used for background</p>
         <p>
-          Secondary Color = #17BEBB <br />
-          Will be used as heading background
+          Heading & Footer Color = #9ba2ff <br />
+          Will be used as the background color for the header and the footer
         </p>
         <p>
-          Accent Color = #C81D25 <br />
-          Will be used to show importance
+          Heading Color = #c81d25 <br />
+          Will be used as heading text color
+        </p>
+        <p>
+          Paragraph Color = #084887 <br />
+          Will be used as paragraph text color
         </p>
       </section>
       <section class="item">
