--- a/rafting/index.html
+++ b/rafting/index.html
@@ -37,10 +37,12 @@
         <h1>White Water Rafting</h1>
         <div class="heroimage">
           <img src="images/kayak-banner1.jpg" alt="Man Kayaking River" />
-          <section class="reserve"><a href="index.html" title="Raft Reserve">
-            <h3>Want to reserve a raft?</h3>
-            <p>Reserve a Raft Here</p>
-          </a></section>
+          <section class="reserve">
+            <a href="index.html" title="Raft Reserve">
+              <h3>Want to reserve a raft?</h3>
+              <p>Reserve a Raft Here</p>
+            </a>
+          </section>
         </div>
         <div class="subject1">
           <img src="images/rapids1.jpg" alt="" />
