Added Site Map to Game Night Site Plan

--- a/gamenight/fp-siteplan.html
+++ b/gamenight/fp-siteplan.html
@@ -23,6 +23,7 @@
         <li>Logo</li>
         <li>Color Scheme</li>
         <li>Typography</li>
+        <li>Site Map</li>
       </ul>
     </nav>
     <main>
@@ -60,6 +61,75 @@
         <h3>Typography</h3>
         <p>Heading Font = Acme</p>
         <p>Paragraph Font = Archivo Narrow</p>
+      </section>
+      <section class="item">
+        <h3>Site Map</h3>
+        <ul>
+          <li>Give a description of different party games</li>
+          <li>
+            Provide the rules of the different games so that they can be
+            understood
+          </li>
+          <li>
+            Give the audience information on where to by the game (if
+            applicable)
+          </li>
+        </ul>
+        <h4>Why visit our site and what to expect</h4>
+        <p>
+          You will want to visit my site so you can learn more about the games
+          that you can play the next time your family gets together for some
+          fun. To help you decide if a game is fit for you, we will provide a
+          short description of what a game so you can know which games you would
+          want to learn. If you don’t have time to read the descriptions
+          provided, we will also provide a video of a play through so that you
+          can see and hear what the game is like. Not only that, but it will
+          also be a quick and easy way to learn how to play the game while some
+          more experienced people play the game and talk it out, step by step.
+        </p>
+        <p>
+          We will make sure that the site is clear on the different types of
+          games. We will split the game into three different categories. Those
+          categories are first, card games; second, board games; and third,
+          other games. Card games will cover a wide variety of games from easy
+          games like Go Fish and Uno to more complicated games like Mafia and
+          Tichu. Board games will cover any games that have a board aspect to
+          the game. These games include Monopoly, Life, and even Secret Hitler.
+          The ‘other games’ categories is vague because it will include games
+          that you can play online and games that don’t need cards or boards.
+          These types of games include Among Us, Cubb, Bocce Ball, and even
+          Croquet. As we find and receive different games to add to the
+          collection, we will add more sections to make it easier for you to
+          find the game that you are looking for.
+        </p>
+        <h4>What questions can be answered through our site</h4>
+        <p>
+          We will be able to help you know the number of players recommended by
+          the game and how many people we recommend for the best game play. We
+          will also provide a simple to understand version of the rules so you
+          can learn and play the game as quickly as possible. Another thing that
+          we will do is help you find where you can buy the game for the best
+          price. We know that there are some games that you wish you could play
+          but you need more people than you have so what can you do? Some games
+          cannot change how many people you need to play but we will find
+          different ways to play games to accommodate the lack of personnel.
+        </p>
+        <h4>Why our site instead of another</h4>
+        <p>
+          We will provide a wide variety of games from card games and board
+          games to electronic and out-door games. Whether you have a group of
+          younger, new game players or a clan of seasoned players, we have the
+          games that are right for you. If you have been playing basic games for
+          ever and want to change up how you play, we will find variations that
+          you can play that other websites will not provide. Other websites will
+          only give you information on a few games. However, if there is a game
+          that you want to learn about and we don’t have it on our page, let us
+          know and we will find the information that you seek. This is not just
+          a website that the Game Night team creates, it is a website that the
+          gaming community creates. If you know of different rules for a game
+          that you like to play, you can also let us know of such rules so that
+          we can provide as many variations as possible.
+        </p>
       </section>
     </main>
   </body>
