Added wireframes and CSS

--- a/gamenight/fp-siteplan.html
+++ b/gamenight/fp-siteplan.html
@@ -9,14 +9,16 @@
       name="description"
       content="This page is the site plan for the Game Night site"
     />
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <div class="page">
     <header>
       <h1>Game Night Site Plan</h1>
       <h2>Justin Palmer</h2>
     </header>
     <nav>
-      <ul>
+      <ul class="list">
         <li>Site Name</li>
         <li>Purpose</li>
         <li>Audience</li>
@@ -48,8 +50,9 @@
         <p>Can we play this game with more/less than what is recommended?</p>
         <p>Where can I buy this game?</p>
       </section>
-      <section class="item">
+      <section class="logo">
         <h3>Logo</h3>
+        <img src="images/logo.png" alt="Game Night Logo">
       </section>
       <section class="item">
         <h3>Color Scheme</h3>
@@ -62,7 +65,7 @@
         <p>Heading Font = Acme</p>
         <p>Paragraph Font = Archivo Narrow</p>
       </section>
-      <section class="item">
+      <section class="sitemap">
         <h3>Site Map</h3>
         <ul>
           <li>Give a description of different party games</li>
@@ -130,7 +133,12 @@
           that you like to play, you can also let us know of such rules so that
           we can provide as many variations as possible.
         </p>
+        <h3>Wireframe</h3>
+        <img class="wireframe_home" src="images/wireframe_home.png" alt="Home Wireframe">
+        <img class="wireframe_type" src="images/wireframe_type.png" alt="Game Type Wireframe">
+        <img class="wireframe_rules" src="images/wireframe_rules.png" alt="How to Play Wireframe">
       </section>
     </main>
+    </div>
   </body>
 </html>
