Added Children Pages and reservation page + CSS

--- a/rafting/schedule.html
+++ b/rafting/schedule.html
@@ -36,42 +36,40 @@
         </nav>
       </header>
       <main>
-        <h1>White Water Rafting</h1>
+        <h1>Schedule and Dates for 2021 Season</h1>
         <div class="heroimage">
-          <img src="images/kayak-banner1.jpg" alt="Man Kayaking River" />
-          <section class="reserve">
+          <img src="images/banner2.jpeg" alt="Raftin on River Bank" />
+          <section class="reserve2">
             <a href="reserve.html" title="Raft Reserve" target="_blank">
               <h3>Want to reserve a raft?</h3>
               <p>Reserve a Raft Here</p>
             </a>
           </section>
         </div>
-        <div class="subject1">
-          <img src="images/rapids1.jpg" alt="" />
-          <h2>We Run Rivers to Relax</h2>
+        <div class="subject1-2">
+          <img src="images/rapids2.jpeg" alt="Rapids" />
+          <h2>3-5 Night Trips</h2>
           <p>
-            We believe that there is nothing like a river trip for relaxing.
-            That is why we subscribe to the dry oar philosophy of boating.
-            Keeping your oars dry for us means taking time to look around and
-            notice the beauty that surrounds the rivers we love.
+            <strong>GRAND CANYON THREE-NIGHT TRIP 2021:</strong><br />
+            April 30 May 13, 20, 27, 30 June 3, 10, 17, 24, 28 July 1, 8, 15,
+            22, 29 August 5, 12, 19, 26 September 9, 17 <br />
+            <strong>SALMON RIVER FIVE-NIGHT TRIP 2021:</strong><br />
+            (The dates listed will be the date that you spend the night in
+            Salmon. The launch date is the following day.) June 3, 10, 17, 24
+            July 2
           </p>
         </div>
-        <div class="subject2">
-          <img src="images/rafting2.jpg" alt="Group Rafting in Rapids" />
-          <h2>We run white water for the rush</h2>
+        <div class="subject2-2">
+          <img src="images/rafting1.jpeg" alt="Group Rafting in Rapids" />
+          <h2>6 Night Trips</h2>
           <p>
-            That doesn't mean we don't also like rapids. Opposites in all things
-            after all. We believe that the tenseness that comes when you are
-            looking down the tongue of a big string of waves makes you
-            appreciate the calm beautiful water that always follows even more.
-          </p>
-        </div>
-        <div class="subject3">
-          <h2>Come raft with us!</h2>
-          <p>
-            We invite you to come relax with us on one of the amazing rivers we
-            visit. Check out our trips and let us know which one best suits you.
-            We're waiting to hear from you!
+            <strong>GRAND CANYON SIX-NIGHT TRIP 2021:</strong> <br />
+            (The dates listed will be the date that you spend the night in
+            Marble Canyon. The launch date is the following day.) April 25 May
+            9, 16, 23, 26, 30 June 6, 13, 20, 24, 27 July 4, 11, 18, 25 August
+            1, 8, 15, 22, 29 September 5, 12 <br />
+            <strong>DESOLATION SIX-NIGHT TRIP 2021:</strong> <br />
+            July 11, 18, 25 Aug 1, 8, 15, 22, 29 Sept 5
           </p>
         </div>
       </main>
