--- a/rafting/price.html
+++ b/rafting/price.html
@@ -36,42 +36,43 @@
         </nav>
       </header>
       <main>
-        <h1>White Water Rafting</h1>
+        <h1>Pricing for 2021 Season</h1>
         <div class="heroimage">
-          <img src="images/kayak-banner1.jpg" alt="Man Kayaking River" />
-          <section class="reserve">
+          <img src="images/river-banner3.jpeg" alt="Raftin Gear on the River" />
+          <section class="reserve3">
             <a href="reserve.html" title="Raft Reserve" target="_blank">
               <h3>Want to reserve a raft?</h3>
               <p>Reserve a Raft Here</p>
             </a>
           </section>
         </div>
-        <div class="subject1">
-          <img src="images/rapids1.jpg" alt="" />
-          <h2>We Run Rivers to Relax</h2>
+        <div class="subject1-3">
+          <img src="images/rapids3.jpeg" alt="" />
+          <h2>3-6 Night Trip Prices</h2>
           <p>
-            We believe that there is nothing like a river trip for relaxing.
-            That is why we subscribe to the dry oar philosophy of boating.
-            Keeping your oars dry for us means taking time to look around and
-            notice the beauty that surrounds the rivers we love.
+            <strong>GRAND CANYON THREE-NIGHT TRIP PRICE 2021:</strong><br />
+            $1,475/per person <br />
+            <strong>SALMON RIVER FIVE-NIGHT TRIP PRICE 2021:</strong><br />
+            $1,540/per person<br />
+            <strong>GRAND CANYON SIX-NIGHT TRIP PRICE 2021:</strong><br />
+            $2,550/per person <br />
+            <strong>DESOLATION SIX-NIGHT TRIP PRICE 2021:</strong> <br />
+            $1,790/per person
           </p>
         </div>
-        <div class="subject2">
-          <img src="images/rafting2.jpg" alt="Group Rafting in Rapids" />
-          <h2>We run white water for the rush</h2>
+        <div class="subject2-3">
+          <img src="images/rafting3.jpeg" alt="Group Rafting in Rapids" />
+          <h2>Equipment</h2>
           <p>
-            That doesn't mean we don't also like rapids. Opposites in all things
-            after all. We believe that the tenseness that comes when you are
-            looking down the tongue of a big string of waves makes you
-            appreciate the calm beautiful water that always follows even more.
-          </p>
-        </div>
-        <div class="subject3">
-          <h2>Come raft with us!</h2>
-          <p>
-            We invite you to come relax with us on one of the amazing rivers we
-            visit. Check out our trips and let us know which one best suits you.
-            We're waiting to hear from you!
+            <strong>Rafts:</strong> <br />
+            Buy $1,000 - $2,000 <br />
+            Rent $100 - $1,000 <br />
+            <strong>Oars:</strong> <br />
+            Buy $20 - $50 <br />
+            Rent $10 - $30 <br />
+            <strong>Helmet:</strong> <br />
+            Buy $40 - $100 <br />
+            Rent $20 - $50 <br />
           </p>
         </div>
       </main>
