added CSS and centered to document

--- a/gamenight/gamerule.html
+++ b/gamenight/gamerule.html
@@ -12,65 +12,63 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <div class="page">
       <header>
-        <img
-        class="logo"
-        src="images/logo.png"
-        alt="Game Night Logo"
-      />
-      <nav>
-        <ul class="mainnav">
-          <li><a href="index.html" title="Site Home">Home</a></li>
-          <li>
-            <a href="gametype.html" title="Game Types">Game Type</a>
-          </li>
-          <li><a href="gamerule.html" title="How to Play">How to Play</a></li>
-        </ul>
-      </nav>
+        <img class="logo" src="images/logo.png" alt="Game Night Logo" />
+        <nav>
+          <ul class="mainnav">
+            <li><a href="index.html" title="Site Home">Home</a></li>
+            <li>
+              <a href="gametype.html" title="Game Types">Game Type</a>
+            </li>
+            <li><a href="gamerule.html" title="How to Play">How to Play</a></li>
+          </ul>
+        </nav>
       </header>
 
       <main>
-          <h1>How to Play</h1>
-          <div class="heroimage">
-            <img src="images/justagame.jpeg" alt="Just A Game" />
-          </div>
+        <h1>How to Play</h1>
+        <div class="heroimage">
+          <img src="images/justagame.jpeg" alt="Just A Game" />
+        </div>
 
-          <div class="subject1-3">
+        <div class="subject1-3">
           <h2>Kubb - (Outdoor)</h2>
           <p>Kubb rules description – (YouTube link)</p>
-          </div>
+        </div>
 
-          <div class="subject2-3">
+        <div class="subject2-3">
           <h2>Tsro - (Card/Board)</h2>
           <p>Tsro rules description – (YouTube link)</p>
-          </div>
+        </div>
 
-          <div class="subject3-3">
+        <div class="subject3-3">
           <h2>Among Us - (Online)</h2>
           <p>Among Us rules description – (YouTube link)</p>
-          </div>
+        </div>
 
-          <div class="subject4-3">
+        <div class="subject4-3">
           <h2>I Can’t Do That - (Improv)</h2>
           <p>I Can’t Do That rules description – (YouTube link)</p>
-          </div>
+        </div>
       </main>
 
       <footer>
         <div class="info">
-            <p>&copy; 2021 - Justin Palmer - WDD130</p>
-          </div>
-          <div class="social">
-            <a href="https://facebook.com" target="_blank"
-              ><img src="images/facebook.png" alt="Facebook"
-            /></a>
-            <a href="https://instagram.com" target="_blank"
-              ><img src="images/instagram.png" alt="Instagram"
-            /></a>
-            <a href="https://twitter.com" target="_blank"
-              ><img src="images/twitter.png" alt="Twitter"
-            /></a>
-          </div>
+          <p>&copy; 2021 - Justin Palmer - WDD130</p>
+        </div>
+        <div class="social">
+          <a href="https://facebook.com" target="_blank"
+            ><img src="images/facebook.png" alt="Facebook"
+          /></a>
+          <a href="https://instagram.com" target="_blank"
+            ><img src="images/instagram.png" alt="Instagram"
+          /></a>
+          <a href="https://twitter.com" target="_blank"
+            ><img src="images/twitter.png" alt="Twitter"
+          /></a>
+        </div>
       </footer>
+    </div>
   </body>
 </html>
