--- a/gamenight/gametype.html
+++ b/gamenight/gametype.html
@@ -12,65 +12,72 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <div class="page">
       <header>
-        <img
-        class="logo"
-        src="images/logo.png"
-        alt="Game Night Logo"
-      />
-      <nav>
-        <ul class="mainnav">
-          <li><a href="index.html" title="Site Home">Home</a></li>
-          <li>
-            <a href="gametype.html" title="Game Types">Game Type</a>
-          </li>
-          <li><a href="gamerule.html" title="How to Play">How to Play</a></li>
-        </ul>
-      </nav>
+        <img class="logo" src="images/logo.png" alt="Game Night Logo" />
+        <nav>
+          <ul class="mainnav">
+            <li><a href="index.html" title="Site Home">Home</a></li>
+            <li>
+              <a href="gametype.html" title="Game Types">Game Type</a>
+            </li>
+            <li><a href="gamerule.html" title="How to Play">How to Play</a></li>
+          </ul>
+        </nav>
       </header>
 
       <main>
-          <h1>Game Type</h1>
-          <div class="heroimage">
-            <img src="images/justagame.jpeg" alt="Just A Game" />
-          </div>
+        <h1>Game Type</h1>
+        <div class="heroimage">
+          <img src="images/justagame.jpeg" alt="Just A Game" />
+        </div>
 
-          <div class="subject1-2">
+        <div class="subject1-2">
           <h2>Outdoor Games</h2>
-          <p>Description of outdoor games and examples of popular games to play.</p>
-          </div>
+          <p>
+            Description of outdoor games and examples of popular games to play.
+          </p>
+        </div>
 
-          <div class="subject2-2">
+        <div class="subject2-2">
           <h2>Card/Board Games</h2>
-          <p>Description of card and board games and examples of popular games to play.</p>
-          </div>
+          <p>
+            Description of card and board games and examples of popular games to
+            play.
+          </p>
+        </div>
 
-          <div class="subject3-2">
+        <div class="subject3-2">
           <h2>Online Games</h2>
-          <p>Description of online games and examples of popular games to play.</p>
-          </div>
+          <p>
+            Description of online games and examples of popular games to play.
+          </p>
+        </div>
 
-          <div class="subject4-2">
+        <div class="subject4-2">
           <h2>Improv Games</h2>
-          <p>Description of improv games and examples of popular games to play.</p>
-          </div>
+          <p>
+            Description of improv games and examples of popular games to play.
+          </p>
+        </div>
       </main>
 
       <footer>
         <div class="info">
-            <p>&copy; 2021 - Justin Palmer - WDD130</p>
-          </div>
-          <div class="social">
-            <a href="https://facebook.com" target="_blank"
-              ><img src="images/facebook.png" alt="Facebook"
-            /></a>
-            <a href="https://instagram.com" target="_blank"
-              ><img src="images/instagram.png" alt="Instagram"
-            /></a>
-            <a href="https://twitter.com" target="_blank"
-              ><img src="images/twitter.png" alt="Twitter"
-            /></a>
-          </div>
+          <p>&copy; 2021 - Justin Palmer - WDD130</p>
+        </div>
+        <div class="social">
+          <a href="https://facebook.com" target="_blank"
+            ><img src="images/facebook.png" alt="Facebook"
+          /></a>
+          <a href="https://instagram.com" target="_blank"
+            ><img src="images/instagram.png" alt="Instagram"
+          /></a>
+          <a href="https://twitter.com" target="_blank"
+            ><img src="images/twitter.png" alt="Twitter"
+          /></a>
+        </div>
       </footer>
+    </div>
   </body>
 </html>
