--- a/gamenight/index.html
+++ b/gamenight/index.html
@@ -12,60 +12,62 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
-      <img class="logo" src="images/logo.png" alt="Game Night Logo" />
-      <nav>
-        <ul class="mainnav">
-          <li><a href="index.html" title="Site Home">Home</a></li>
-          <li>
-            <a href="gametype.html" title="Game Types">Game Type</a>
-          </li>
-          <li><a href="gamerule.html" title="How to Play">How to Play</a></li>
-        </ul>
-      </nav>
-    </header>
+    <div class="page">
+      <header>
+        <img class="logo" src="images/logo.png" alt="Game Night Logo" />
+        <nav>
+          <ul class="mainnav">
+            <li><a href="index.html" title="Site Home">Home</a></li>
+            <li>
+              <a href="gametype.html" title="Game Types">Game Type</a>
+            </li>
+            <li><a href="gamerule.html" title="How to Play">How to Play</a></li>
+          </ul>
+        </nav>
+      </header>
 
-    <main>
-      <h1>Game Night</h1>
-      <div class="heroimage">
-        <img src="images/justagame.jpeg" alt="Just A Game" />
-      </div>
+      <main>
+        <h1>Game Night</h1>
+        <div class="heroimage">
+          <img src="images/justagame.jpeg" alt="Just A Game" />
+        </div>
 
-      <div class="subject1">
-        <h2>What is Game Night?</h2>
-        <p>
-          Game Night is a site where you can find fun games to play with your
-          friends and family. Here, you can learn how to play games you never
-          knew or have forgotten over time. Not only are you going to be able to
-          learn how to play different games, but you will be guided to the best
-          place to buy the games you want if necessary.
-        </p>
-      </div>
+        <div class="subject1">
+          <h2>What is Game Night?</h2>
+          <p>
+            Game Night is a site where you can find fun games to play with your
+            friends and family. Here, you can learn how to play games you never
+            knew or have forgotten over time. Not only are you going to be able
+            to learn how to play different games, but you will be guided to the
+            best place to buy the games you want if necessary.
+          </p>
+        </div>
 
-      <div class="subject2">
-        <h2>What if I don't see a game?</h2>
-        <p>
-          Do you not see one of your favorite games? Let us know and we will add
-          the game so everyone can join in on the fun.
-        </p>
-      </div>
-    </main>
+        <div class="subject2">
+          <h2>What if I don't see a game?</h2>
+          <p>
+            Do you not see one of your favorite games? Let us know and we will
+            add the game so everyone can join in on the fun.
+          </p>
+        </div>
+      </main>
 
-    <footer>
-      <div class="info">
-        <p>&copy; 2021 - Justin Palmer - WDD130</p>
-      </div>
-      <div class="social">
-        <a href="https://facebook.com" target="_blank"
-          ><img src="images/facebook.png" alt="Facebook"
-        /></a>
-        <a href="https://instagram.com" target="_blank"
-          ><img src="images/instagram.png" alt="Instagram"
-        /></a>
-        <a href="https://twitter.com" target="_blank"
-          ><img src="images/twitter.png" alt="Twitter"
-        /></a>
-      </div>
-    </footer>
+      <footer>
+        <div class="info">
+          <p>&copy; 2021 - Justin Palmer - WDD130</p>
+        </div>
+        <div class="social">
+          <a href="https://facebook.com" target="_blank"
+            ><img src="images/facebook.png" alt="Facebook"
+          /></a>
+          <a href="https://instagram.com" target="_blank"
+            ><img src="images/instagram.png" alt="Instagram"
+          /></a>
+          <a href="https://twitter.com" target="_blank"
+            ><img src="images/twitter.png" alt="Twitter"
+          /></a>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
